@@ -1,3 +1,9 @@
+2005-07-12 Francois Proulx <francois.proulx@gmail.com>
+	* Fixed XML protocol for exchanging hotspots status.
+		* Should now be considered stable (stamped v1.0)
+	* Fixed hotspots status map to reflect the changes
+	* Added french translations
+	
 2005-07-11 Francois Proulx <francois.proulx@gmail.com>
 	* Changed link to hotspots map using NON ssl because Google Keys are sensitive to the whole path.
 	
